--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@aaa-soft/form-structure",
-	"version": "0.0.0",
+	"version": "0.1.0-alpha.1",
 	"module": "index.ts",
 	"type": "module",
 	"devDependencies": {
